# sold

./: CMakeLists.txt  README.md  attach-before-exec.py  elf_binary.cc  elf_binary.h  fedora-latest.Dockerfile  hash.h  ldsoconf.cc  memprotect_builder.h  mprotect_builder.cc  mprotect_builder.h  print_arrays.cc  print_dynsymtab.cc  print_ehframe.cc  print_version.cc  pybind_test.cc  pybind_test_sold.py  raw_write_test.c  shdr_builder.cc  shdr_builder.h  sold.cc  sold.h  strtab_builder.cc  strtab_builder.h  symtab_builder.cc  symtab_builder.h  utils.cc  utils.h  version_builder.cc  version_builder.h
.github/workflows/: build.yml  fedora.yml  ubuntu.yml
libtorch-example-app/: CMakeLists.txt  aten-app.cc  c10-app.cc  c10-test.cc  example-app.cpp
libtorch-test/: CMakeLists.txt  torch_test.cc
libtorch_test/: CMakeLists.txt
pybind_test/: CMakeLists.txt  README.md  add.cc  object.cc  test_soldout_modules.py
tests/: CMakeLists.txt  libmax2.c  run-all-tests.sh  test-versions.sh
tests/call_once-g++/: test.sh
tests/call_once-g++-aarch64/: test.sh
tests/dynamic_cast-g++/: test.sh
tests/dynamic_cast-g++-aarch64/: test.sh
tests/excepction-g++/: main.cc  test.sh
tests/exception-g++/: test.sh
tests/exception-g++-aarch64/: test.sh
tests/exception-str-g++-aarch64/: test.sh
tests/extern-variable-address-gcc/: hoge.c  main.c  test.sh
tests/global-write-aarch64/: test.sh
tests/hello-g++/: test.sh
tests/hello-g++-aarch64/: test.sh
tests/hello-gcc/: test.sh
tests/hello-gcc-aarch64/: test.sh
tests/inheritance-g++-aarch64/: test.sh
tests/just-return-g++/: .gitignore  test.sh
tests/just-return-g++-aarch64/: test.sh
tests/just-return-gcc/: test.sh
tests/mprotect/: test.sh
tests/mprotect-aarch64/: test.sh
tests/registry/: .gitignore  hoge.cc  impl.cc  impl.h  interface.cc  interface.h  main.cc  registry.h  test.sh
tests/setjmp-gcc/: test.sh
tests/simple-lib-g++/: test.sh
tests/simple-lib-g++-aarch64/: test.sh
tests/simple-lib-gcc/: .gitignore  test.sh
tests/simple-lib-gcc-aarch64/: test.sh
tests/static-in-class-g++/: test.sh
tests/static-in-class-g++-aarch64/: test.sh
tests/static-in-function-g++/: test.sh
tests/stb_gnu_unique_tls/: test.sh
tests/stb_gnu_unique_tls-aarch64/: test.sh
tests/std_function/: .gitignore  fuga.cc  hoge.cc  test.sh
tests/tls-bss-g++/: test.sh
tests/tls-bss-g++-aarch64/: test.sh
tests/tls-bss-gcc/: main.c  test.sh
tests/tls-bss-gcc-aarch64/: test.sh
tests/tls-conflict-aarch64/: test.sh
tests/tls-dlopen-gcc/: test.sh
tests/tls-dlopen-gcc-aarch64/: test.sh
tests/tls-gcc/: main.c  test.sh
tests/tls-gcc-aarch64/: test.sh
tests/tls-lib-gcc/: .gitignore  base.c  base.h  lib.c  lib.h  main.c  test.sh
tests/tls-lib-gcc-aarch64/: test.sh
tests/tls-lib-gcc-without-base/: test.sh
tests/tls-lib-gcc-without-base-aarch64/: test.sh
tests/tls-multiple-lib-gcc/: base2.c  base2.h  lib.c  lib.h  main.c  test.sh
tests/tls-multiple-lib-gcc-aarch64/: test.sh
tests/tls-multiple-module-g++/: test.sh
tests/tls-multiple-module-g++-aarch64/: test.sh
tests/tls-thread-g++/: test.sh
tests/tls-thread-g++-aarch64/: test.sh
tests/typeid-g++/: test.sh
tests/unique_ptr-aarch64/: test.sh
tests/version/: libcmp2.c  libcmp2.def  libcmp2.h  memo.sh  vertest2.c
tests/version-g++/: libmax1.cc  libmax2.cc  libmax2.def  test.sh  vertest1.cc  vertest2.cc
tests/version-gcc/: .gitignore  test.sh
tests/version-gcc-aarch64/: test.sh
tests/version2/: libcmp.c  memo.sh  version.map
